--- a/templates/docs/contract_paper_unchecked.html
+++ b/templates/docs/contract_paper_unchecked.html
@@ -18,7 +18,7 @@
 		контролю и надзору в сфере образования РБ в лице директора Тажиева Рифа Рахимовича, действующего на
 		основании Устава Исполнителя, назначенного Распоряжением администрации городского округа г. Стерлитамак РБ
             № 70л от 11.11.2003г. с одной стороны, и, с другой стороны <u>{{ data.payer_surname_txt }} {{ data.payer_name_txt }} {{ data.payer_father_name_txt }}</u> (в дальнейшем – Заказчик)
-            {% if student_document_type_txt %}и <u>{{ data.student_surname_txt }} {{ data.student_name_txt }} {{ data.student_father_name_txt }}</u> (в дальнейшем – Потребитель){% endif %} заключили в соответствии с Гражданским кодексом Российской
+            {% if data.student_document_type_txt %}и <u>{{ data.student_surname_txt }} {{ data.student_name_txt }} {{ data.student_father_name_txt }}</u> (в дальнейшем – Потребитель){% endif %} заключили в соответствии с Гражданским кодексом Российской
             Федерации, Законами Российской Федерации «Об образовании в Российской Федерации» и «О защите прав потребителей», а также
 		Правилами оказания платных образовательных услуг в сфере дошкольного и общего образования, утверждёнными
 		постановлением Правительства Российской Федерации «Об утверждении Правил оказания платных образовательных
@@ -78,7 +78,7 @@
             Настоящий договор вступает в силу со дня его заключения сторонами и действует до 21.05.2018г. Договор составлен в двух экземплярах, имеющих равную юридическую силу.<br></div>
 		<h4>Подписи сторон</h4>
 
-        {% if student_document_type_txt %}
+        {% if data.student_document_type_txt %}
             <table>
             <tr>
                 <td style="width: 42%;">
