--- a/templates/models/course/query.html
+++ b/templates/models/course/query.html
@@ -13,7 +13,9 @@
         </thead>
 <tbody id="course_table_body_0">
         {% for object in object_set %}
-            {% include 'models/course/main.html' %}
+            {% if not object.deleted_flg %}
+                {% include 'models/course/main.html' %}
+            {% endif %}
         {% endfor %}
 </tbody>
 {% if user.is_superuser %}
