--- a/templates/versions/details/contract_versions.html
+++ b/templates/versions/details/contract_versions.html
@@ -116,7 +116,7 @@
                 {% include 'buttons/expand.html' %}
             {% endwith %}
         </div>
-{#            <button onclick="toggleInfoTab('contract_payment_version', 0)" style="background-color: white; color: #3b5998">#}
+{#            <button onclick="toggleInfoTab('contract_payment_version', 0)" style="background-color: white; color: var(--main-color)">#}
 {#                <span id="contract_payment_version_row_more_info_button_span_0" class="glyphicon glyphicon-arrow-down" ></span>#}
 {#            </button>#}
         </td>
