--- a/templates/versions/details/student_person_versions.html
+++ b/templates/versions/details/student_person_versions.html
@@ -1,4 +1,4 @@
-<hr color="#3b5998" style="border-color: white; border-width: 4px; margin: -10px;"/>
+<hr color="var(--main-color)" style="border-color: white; border-width: 4px; margin: -10px;"/>
 
         <div style="margin-bottom: 60px">
             <h2 style="color: darkblue; margin-bottom: 30px">Данные студента</h2>
