--- a/cspcapp/static/css/registration.css
+++ b/cspcapp/static/css/registration.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     height: 100%;
     overflow: hidden;
 }
@@ -11,7 +11,7 @@ body {
 /*    left: calc(50% - 150px);*/
 /*    width: 300px;*/
 /*    !*height: 150px;*!*/
-/*    background-color: #3b5998;*/
+/*    background-color: var(--main-color);*/
 /*    color: white;*/
 /*    padding: 10px;*/
 /*    border: 10px black;*/
@@ -35,7 +35,7 @@ body {
 /*    width: 100%;*/
 /*    height: 30px;*/
 /*    background-color: white;*/
-/*    color: #3b5998;*/
+/*    color: var(--main-color);*/
 /*    border-width: 0;*/
 /*    text-align: center;*/
 /*    vertical-align: middle;*/
@@ -49,27 +49,27 @@ body {
     float: right;
     height: 100%;
     width: 260px;
-    background-color: #5F7EC1;
+    background-color: var(--main-color-little-darker);
     padding: 10px;
-    color: white;
+    color: var(--main-background-1);
 }
 
 .actions-box input {
-    background-color: #3b5998;
+    background-color: var(--main-color);
     border-width: 0;
     padding-left: 5px;
     height: 30px;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 100%;
-    color: white;
+    color: var(--main-background-1);
 }
 
 .actions-box button {
-    background-color: #3b5998;
+    background-color: var(--main-color);
     border-width: 0;
     padding-left: 5px;
-    color: white;
+    color: var(--main-background-1);
     width: 100%;
     height: 30px;
     text-align: center;
@@ -80,5 +80,5 @@ body {
 }
 
 .actions-box input::placeholder {
-    color: #5F7EC1;
+    color: var(--main-color-middle-lighter);
 }
