--- a/cspcapp/static/css/student_detail_view.css
+++ b/cspcapp/static/css/student_detail_view.css
@@ -1,5 +1,5 @@
 .dynamic-info-box {
-    background-color: #3b5998;
+    background-color: var(--main-color);
     margin: 5px 0px 5px 5px;
     padding: 0 10px 0 10px;
     border: 1px solid grey;
@@ -16,7 +16,7 @@
 .person-box {
     width: 420px;
     height: 500px;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     margin: 10px;
     padding: 10px;
     border: 1px solid grey;
@@ -32,7 +32,7 @@
 .education-box {
     width: 250px;
     height: 120px;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     margin: 10px;
     padding: 10px;
     border: 1px solid grey;
@@ -48,7 +48,7 @@
 .contract-box {
     width: 350px;
     height: 400px;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     margin: 10px;
     padding: 10px;
     border: 1px solid grey;
@@ -62,7 +62,7 @@
 
 .passport-data-box {
     height: 89px;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     padding: 10px;
     border: 1px solid grey;
     color: white;
@@ -75,7 +75,7 @@
 .main-contract-data-box {
     width: 100%;
     height: 100%;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     /*background-color: black;*/
     /*margin: 5px;*/
     padding: 10px;
@@ -91,7 +91,7 @@
 .one-field-data-box {
     /*width: 40%;*/
     height: 40px;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     /*background-color: black;*/
     /*margin: 10px;*/
     padding: 10px;
@@ -135,14 +135,14 @@
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 0;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     width: calc(25% - 7px);
     height: 30px;
 }
 
 .address-data-box  {
     height: 65px;
-    background-color: #3b5998;
+    background-color: var(--main-color);
     padding: 10px;
     border: 1px solid grey;
     color: white;
@@ -186,7 +186,7 @@ input[type="text"]:disabled {
 /*    margin-top: 5px;*/
 /*    margin-left: 5px;*/
 /*    margin-right: 0;*/
-/*    background-color: #3b5998;*/
+/*    background-color: var(--main-color);*/
 /*    width: calc(25% - 7px);*/
 /*    height: 30px;*/
 /*    float: left;*/
