--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
           crossorigin="anonymous">
+
+
     <script src="{% static 'javascript/swig.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/jquery.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/constants.js' %}" type="text/javascript"></script>
@@ -29,6 +31,7 @@
     <script src="{% static 'javascript/commonFiles/common.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/config.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/base.js' %}" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
     {% block scriptconnect %}
     {% endblock %}
 
@@ -41,7 +44,7 @@
 
     <div class="login-info">
         <div class="circle" style="font-size: 12px; ">
-            <a style="width: 100%; height: 100%; margin: 0; font-size: 20px; text-align: center; padding: 7px 0 0 0;" href="/accounts/profile/" data-toggle="tooltip" data-placement="right" title="Настройки">
+            <a style="width: 100%; height: 100%; margin: 0; font-size: 20px; text-align: center; padding: 7px 0 0 0; color: var(--main-color)" href="/accounts/profile/" data-toggle="tooltip" data-placement="right" title="Настройки">
                     {% if user_additional_info %}
                         {{ user_additional_info.person_name_txt|first }}{{ user_additional_info.person_surname_txt|first }}
                     {% endif %}
@@ -61,16 +64,16 @@
 
 
     <div class="sidebar-element">
-        <a href="/" data-toggle="tooltip" data-placement="right" title="Список учеников"><span class="glyphicon glyphicon-list-alt"></span></a>
+        <a href="/" data-toggle="tooltip" data-placement="right" title="Список учеников" {% block students_overview %}{% endblock %}><span class="glyphicon glyphicon-list-alt"></span></a>
     </div>
     {% block common_list_sublevel %}
     {% endblock %}
     <div class="sidebar-element">
-        <a href="/courses/" data-toggle="tooltip" data-placement="right" title="Список курсов"><span class="glyphicon glyphicon-tasks"></span></a>
+        <a href="/courses/" data-toggle="tooltip" data-placement="right" title="Список курсов" {% block courses_overview %}{% endblock %}><span class="glyphicon glyphicon-tasks"></span></a>
     </div>
 {% if user.is_superuser %}
     <div class="sidebar-element">
-        <a href="/teachers/" data-toggle="tooltip" data-placement="right" title="Список учителей"><span class="glyphicon glyphicon-briefcase"></span></a>
+        <a href="/teachers/" data-toggle="tooltip" data-placement="right" title="Список учителей" {% block teachers_overview %}{% endblock %}><span class="glyphicon glyphicon-briefcase"></span></a>
     </div>
 
 
