--- a/templates/buttons/add.html
+++ b/templates/buttons/add.html
@@ -11,7 +11,7 @@
         <span class="glyphicon glyphicon-plus" id="{{ db_table }}_add_button_span_0"></span>
     </button>
 {% else %}
-    <button id="{{ db_table }}_add_button_{{ object.pk }}" onclick="addNewObject('{{ db_table }}', {{ object.pk }})">
+    <button id="{{ db_table }}_add_button_{{ object.pk }}" style="{% if custom_width %}{{ custom_width }}{% endif %}" onclick="addNewObject('{{ db_table }}', {{ object.pk }})">
         <span class="glyphicon glyphicon-plus" id="{{ db_table }}_add_button_span_{{ object.pk }}"></span>
     </button>
 {% endif %}
