--- a/templates/courses_info_view.html
+++ b/templates/courses_info_view.html
@@ -11,9 +11,12 @@
     <h1>
     Список курсов
     </h1>
-    
-    <a>fdsfds</a>
+
 
     {% include 'models/course/query.html' %}
 
+{% endblock %}
+
+{% block courses_overview %}
+    style="background-color: var(--main-color-darker); border-left: 5px solid white; padding-left: 8px;"
 {% endblock %}
