--- a/templates/models/one_field_data_box/main.html
+++ b/templates/models/one_field_data_box/main.html
@@ -3,12 +3,14 @@
         <form action="" method="post" id="{{ object_type }}_data_form_{{ object_id }}" name="{{ object_type }}_data_form_{{ object_id }}">
             {% csrf_token %}
             <input type="hidden" name="id" value="{{ object_id }}">
-            <input type="text" name="{{ object_name }}" value="{{ object_value }}" style="background-color: #3b5998; border-width: 0; width: calc(100% - 9px)" readonly/>
+            <input type="text" name="{{ object_name }}" value="{{ object_value }}" style="background-color: var(--main-color); border-width: 0; width: calc(100% - 9px)" readonly/>
         </form>
     </div>
-    <button style="background-color: #3b5998; height: 40px;" onclick="enableEditObjectMode('{{ object_type }}', {{ object_id }})" id="{{ object_type }}_data_button_{{ object_id }}">
+    <div class="buttons-table-horizontal default-buttons" style="width: 30px; margin-left: 5px;">
+    <button style="height: 40px;" onclick="enableEditObjectMode('{{ object_type }}', {{ object_id }})" id="{{ object_type }}_data_button_{{ object_id }}">
         <span class="glyphicon glyphicon-pencil" id="{{ object_type }}_data_button_span_{{ object_id }}"></span>
     </button>
+    </div>
 {% else %}
     <div class="one-field-data-box" style="width: 100%">
         {{ object_value }}
