--- a/templates/students_overview.html
+++ b/templates/students_overview.html
@@ -8,3 +8,8 @@
 {% block content %}
     {% include 'models/student_person/query.html' %}
 {% endblock %}
+
+
+{% block students_overview %}
+    style="background-color: var(--main-color-darker); border-left: 5px solid white; padding-left: 8px;"
+{% endblock %}
